[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/sprites/menuBg/blue sky.png" type="Texture" id=1]
[ext_resource path="res://PAMPARAY Demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/sprites/UI/pause/Pause menu buttons bg.png" type="Texture" id=3]
[ext_resource path="res://buttons/popup.tres" type="Animation" id=4]
[ext_resource path="res://buttons/Pause_anim_tree.gd" type="Script" id=5]
[ext_resource path="res://Assets/sprites/UI/pause/Pause menu bg red.png" type="Texture" id=6]
[ext_resource path="res://Assets/sprites/UI/pause/Pause menu bg.png" type="Texture" id=7]
[ext_resource path="res://buttons/GameOver.gd" type="Script" id=8]
[ext_resource path="res://Scripts/total_score.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 50
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "popup"

[sub_resource type="AnimationNodeTimeScale" id=3]

[sub_resource type="AnimationNodeBlendTree" id=4]
graph_offset = Vector2( -326.308, 107.5 )
nodes/Animation/node = SubResource( 2 )
nodes/Animation/position = Vector2( -160, 160 )
nodes/TimeScale/node = SubResource( 3 )
nodes/TimeScale/position = Vector2( 40, 140 )
node_connections = [ "output", 0, "TimeScale", "TimeScale", 0, "Animation" ]

[sub_resource type="AnimationNodeStateMachine" id=5]
states/popup/node = SubResource( 4 )
states/popup/position = Vector2( 301, 70 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[node name="GameOver" type="Node2D"]
pause_mode = 2
z_index = 25
script = ExtResource( 8 )

[node name="Pause menu bg" type="Sprite" parent="."]
pause_mode = 2
position = Vector2( 534.933, 903.658 )
scale = Vector2( 1.61697, 1.49849 )
z_index = 10
texture = ExtResource( 6 )

[node name="pause_blue" type="Sprite" parent="Pause menu bg"]
visible = false
texture = ExtResource( 7 )

[node name="Restart" type="Button" parent="Pause menu bg"]
pause_mode = 2
margin_left = -169.317
margin_top = 6.06841
margin_right = 173.683
margin_bottom = 117.068
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Pause menu bg/Restart"]
show_behind_parent = true
position = Vector2( 175.982, 54.6143 )
scale = Vector2( 0.659782, 0.410182 )
texture = ExtResource( 3 )

[node name="Button" type="Button" parent="Pause menu bg"]
pause_mode = 2
margin_left = -172.35
margin_top = 146.883
margin_right = 170.65
margin_bottom = 257.883
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Pause menu bg/Button"]
show_behind_parent = true
position = Vector2( 175.982, 56.299 )
scale = Vector2( 0.659782, 0.410182 )
texture = ExtResource( 3 )

[node name="total_score" type="Node2D" parent="Pause menu bg"]
position = Vector2( -122.037, -210.191 )
script = ExtResource( 9 )

[node name="score_text" type="Label" parent="Pause menu bg/total_score"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/popup = ExtResource( 4 )

[node name="darken_bg" type="Sprite" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.717647 )
position = Vector2( 543.555, 997.879 )
scale = Vector2( 1.46938, 1.51374 )
z_index = -1
texture = ExtResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
pause_mode = 2
tree_root = SubResource( 5 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 6 )
parameters/popup/TimeScale/scale = 4.0
script = ExtResource( 5 )
[connection signal="pressed" from="Pause menu bg/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Pause menu bg/Button" to="." method="_on_Button_pressed"]
